--- a/package.json
+++ b/package.json
@@ -16,25 +16,32 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "@tanstack/vue-query": "^5.90.2",
     "pinia": "^3.0.3",
-    "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "tailwindcss": "^4.1.13",
+    "viem": "^2.37.8",
+    "vue": "^3.5.22",
+    "vue-router": "^4.5.1",
+    "wagmi": "^2.17.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.13",
     "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.16.5",
+    "@types/node": "^22.18.6",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.31.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.36.0",
     "eslint-plugin-vue": "~10.3.0",
-    "jiti": "^2.4.2",
+    "jiti": "^2.6.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
-    "typescript": "~5.8.0",
-    "vite": "^7.0.6",
-    "vite-plugin-vue-devtools": "^8.0.0",
-    "vue-tsc": "^3.0.4"
+    "typescript": "~5.8.3",
+    "vite": "^7.1.7",
+    "vite-plugin-vue-devtools": "^8.0.2",
+    "vue-tsc": "^3.0.8"
   }
 }
