--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/vue-query": "^5.90.2",
+    "@wagmi/vue": "^0.2.11",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.13",
     "viem": "^2.37.8",
