--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "generate:api": "orval"
   },
   "dependencies": {
+    "@reown/appkit": "^1.8.8",
+    "@reown/appkit-adapter-wagmi": "^1.8.8",
     "@tailwindcss/vite": "^4.1.13",
     "@tanstack/vue-query": "^5.90.2",
     "@wagmi/vue": "^0.2.11",
+    "lucide-vue-next": "^0.544.0",
+    "orval": "^8.0.3",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.13",
-    "viem": "^2.37.8",
+    "viem": "^2.37.12",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "wagmi": "^2.17.5"
@@ -34,6 +39,7 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.7.0",
+    "ajv": "^8.12.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.36.0",
     "eslint-plugin-vue": "~10.3.0",
